infra/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hms-emr
  labels:
    name: hms-emr
